--- a/index.html
+++ b/index.html
@@ -22,29 +22,44 @@
         Free shipping for orders 2000 PHP and above!
     </div>
 
-    <!-- Header with Logo and Navigation -->
+    <!-- Header with Logo, Navigation, and Cart Icon -->
     <header class="header">
         <img src="public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
         <nav class="nav">
             <a href="index.html" class="nav-link active">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="pages/shop.html" class="nav-link">Shop</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="/pages/about.html" class="nav-link">About</a>
+            <a href="/pages/shop.html" class="nav-link">Shop</a>
+            <a href="/pages/contact.html" class="nav-link">Contact</a>
         </nav>
-
-        <a href="cart.html" class="cart-icon">
-            <img src="../public/images/cart-icon.png" alt="Cart" width="30" height="30">
+        <a href="/pages/cart.html" class="icon-cart">
+            <img src="public/images/icon-cart.png" alt="Cart" width="30" height="30">
         </a>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <img src="public/images/hero.png" alt="Craft items" class="hero-image">
+   <!-- Reusable Page Top and Bottom Structure -->
+    <section class="page-section">
+        <div class="page-top-half"></div>
+        <div class="page-bottom-half"></div>
+        
+        
+        <div class="hero-image-container">
+            <img src="public/images/hero.png" alt="Craft items" class="hero-image">
+        </div>
         <div class="hero-text">
             <h1>Hello!</h1>
             <p>Welcome to Critter Craft Co! We specialize in creating unique, customized souvenirs perfect for birthdays, christenings, and any special occasion. From fridge magnets to personalized chip bags and more, each item is crafted to add a memorable touch to your celebrations. Explore our collection and let us bring your vision to life!</p>
-            <a href="shop.html" class="order-btn">Order Now</a>
+            <a href="/pages/shop.html" class="order-btn">Order Now</a>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 Critter Craft Co. All Rights Reserved.</p>
+        <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=61556898350697" aria-label="Facebook">Facebook</a>
+            <a href="#" aria-label="Instagram">Instagram</a>
+            <a href="#" aria-label="Twitter">Twitter</a>
+        </div>
+    </footer>
 </body>
 </html>
