Update Paths for Github Pages

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <img src="public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
         <nav class="nav">
             <a href="index.html" class="nav-link active">Home</a>
-            <a href="/pages/about.html" class="nav-link">About</a>
-            <a href="/pages/shop.html" class="nav-link">Shop</a>
-            <a href="/pages/contact.html" class="nav-link">Contact</a>
+            <a href="./pages/about.html" class="nav-link">About</a>
+            <a href="./pages/shop.html" class="nav-link">Shop</a>
+            <a href="./pages/contact.html" class="nav-link">Contact</a>
         </nav>
         <a href="/pages/cart.html" class="icon-cart">
             <img src="public/images/icon-cart.png" alt="Cart" width="30" height="30">
@@ -43,12 +43,12 @@
         
         
         <div class="hero-image-container">
-            <img src="public/images/hero.png" alt="Craft items" class="hero-image">
+            <img src="./public/images/hero.png" alt="Craft items" class="hero-image">
         </div>
         <div class="hero-text">
             <h1>Hello!</h1>
             <p>Welcome to Critter Craft Co! We specialize in creating unique, customized souvenirs perfect for birthdays, christenings, and any special occasion. From fridge magnets to personalized chip bags and more, each item is crafted to add a memorable touch to your celebrations. Explore our collection and let us bring your vision to life!</p>
-            <a href="/pages/shop.html" class="order-btn">Order Now</a>
+            <a href="./pages/shop.html" class="order-btn">Order Now</a>
         </div>
     </section>
 
