modifed absolute paths

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
             <a href="shop.html" class="nav-link ">Shop</a>
             <a href="contact.html" class="nav-link active">Contact</a>
         </nav>
-        <a href="/pages/cart.html" class="icon-cart">
+        <a href="./pages/cart.html" class="icon-cart">
             <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
         </a>
     </header>
