--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="./pages/shop.html" class="nav-link">Shop</a>
             <a href="./pages/contact.html" class="nav-link">Contact</a>
         </nav>
-        <a href="/pages/cart.html" class="icon-cart">
+        <a href="./pages/cart.html" class="icon-cart">
             <img src="public/images/icon-cart.png" alt="Cart" width="30" height="30">
         </a>
     </header>
