--- a/pages/shop.html
+++ b/pages/shop.html
@@ -31,7 +31,7 @@
         </nav>
        
         <div class="cart-icon-container">
-            <a href="/pages/cart.html" class="cart-icon">
+            <a href="./pages/cart.html" class="cart-icon">
                  <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
                 <span class="cart-count"></span>
             </a>
