--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Critter Craft Co - Home</title>
+
+     <!-- External JavaScript-->
+     <script defer src="../js/script.js"></script>
+     <script src="../js/cart.js"></script>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +35,7 @@
             <a href="./pages/shop.html" class="nav-link">Shop</a>
             <a href="./pages/contact.html" class="nav-link">Contact</a>
         </nav>
-        <a href="./pages/cart.html" class="icon-cart">
+        <a href="./pages/cart.html"icon-cart">
             <img src="public/images/icon-cart.png" alt="Cart" width="30" height="30">
         </a>
     </header>
