--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,69 +7,82 @@
 
     <!-- External JavaScript-->
     <script defer src="../js/script.js"></script>
+    <script defer src="../js/cart.js"></script>
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
-    <!-- Stylesheets -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/fonts.css">
-    <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/index.css">
+
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Free Shipping Banner -->
-    <div class="shipping-banner">
+    <div class="shipping-banner text-center py-2 text-white">
         Free shipping for orders 2000 PHP and above!
     </div>
 
-    <!-- Header -->
-    <header class="header">
-        <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
+    <header class="header py-3 px-4 d-flex justify-content-between align-items-center">
+        <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo" height="50">
         <nav class="nav">
-            <a href="../index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link ">About</a>
-            <a href="shop.html" class="nav-link ">Shop</a>
-            <a href="contact.html" class="nav-link active">Contact</a>
+            <a href="/index.html" class="nav-link">Home</a>
+            <a href="../pages/about.html" class="nav-link">About</a>
+            <a href="../pages/shop.html" class="nav-link">Shop</a>
+            <a href="../pages/contact.html" class="nav-link active">Contact</a>
         </nav>
-        <a href="./pages/cart.html" class="icon-cart">
+        <a href="../pages/cart.html" class="cart-icon">
             <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+            <span class="cart-count">0</span>
         </a>
     </header>
-    <!-- Page Background Layout -->
-    <div class="page-top-half"></div>
-    <div class="page-bottom-half"></div>
 
-    <!-- Contact Page Content with Form -->
-    <section class="contact-page">
-        <div class="contact-container">
-            <div class="contact-image"></div>
-            <div class="contact-info">
-                <h1>Contact Us</h1>
-                <p>If you have any inquiries or concerns, please fill out the form below and we will get back to you as soon as possible.</p>
-                
-                <!-- Contact Form -->
-                <form id="contact-form" action="#" method="post">
-                    <input type="email" name="email" placeholder="Email" class="contact-input" required>
-                    <input type="text" name="name" placeholder="Name" class="contact-input" required>
-                    <input type="text" name="contact" placeholder="Contact No." class="contact-input" required>
-                    <textarea name="inquiry" placeholder="Inquiry" class="contact-input" rows="4" required></textarea>
-                    <button type="submit" class="contact-submit">Submit</button>
-                </form>
+    <!-- Hero Section -->
+    <section class="page-section position-relative">
+        <!-- White Top Part -->
+        <div class="page-top-half"></div>
+
+        <!-- Yellow Bottom Part -->
+        <div class="page-bottom-half"></div>
+
+        <!-- Contact Page Content -->
+        <div class="container position-relative z-1 d-flex flex-column align-items-center text-center py-5">
+            <div class="contact-container">
+                <!-- Image Section -->
+                <div class="contact-image"></div>
+
+                <!-- Contact Info Section -->
+                <div class="contact-info">
+                    <h1 class="display-5 fw-bold">Contact Us</h1>
+                    <p>If you have any inquiries or concerns, please fill out the form below and we will get back to you as soon as possible.</p>
+
+                    <!-- Form -->
+                    <form id="contact-form" action="#" method="post">
+                        <input type="email" name="email" placeholder="Email" class="contact-input" required>
+                        <input type="text" name="name" placeholder="Name" class="contact-input" required>
+                        <input type="text" name="contact" placeholder="Contact No." class="contact-input" required>
+                        <textarea name="inquiry" placeholder="Inquiry" class="contact-input" rows="4" required></textarea>
+                        <button type="submit" class="contact-submit">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2024 Critter Craft Co. All Rights Reserved.</p>
-        <div class="social-links">
-            <a href="#" aria-label="Facebook">Facebook</a>
-            <a href="#" aria-label="Instagram">Instagram</a>
-            <a href="#" aria-label="Twitter">Twitter</a>
+    <footer class="footer mt-auto bg-dark text-white text-center py-3">
+        <p class="mb-1">&copy; 2024 Critter Craft Co. All Rights Reserved.</p>
+        <div class="d-flex justify-content-center gap-3">
+            <a href="https://www.facebook.com/profile.php?id=61556898350697" class="text-decoration-none footer-link">Facebook</a>
+            <a href="#" class="text-decoration-none footer-link">Instagram</a>
+            <a href="#" class="text-decoration-none footer-link">Twitter</a>
         </div>
     </footer>
+    
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
