--- a/pages/payment.html
+++ b/pages/payment.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment - Critter Craft Co.</title>
 
-    <!-- External JavaScript-->
-    <script defer src="../js/script.js"></script> <!-- New JS file for dynamic content -->
+  <!-- External JavaScript-->
+  <script defer src="../js/script.js"></script>
+  <script defer src="../js/cart.js"></script>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Poppins:wght@300&display=swap" rel="stylesheet">
-    
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="../css/fonts.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/index.css">
+
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+   <!-- Bootstrap JS -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+   <!-- Google Fonts -->
+   <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+   <!-- Custom CSS -->
+   <link rel="stylesheet" href="../css/fonts.css">
+   <link rel="stylesheet" href="../css/styles.css">
+   <link rel="stylesheet" href="../css/index.css">
+
 </head>
 <body>
     <!-- Shipping Banner -->
@@ -31,11 +38,12 @@
         <nav class="nav">
             <a href="../index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
-            <a href="shop.html" class="nav-link active">Shop</a>
+            <a href="shop.html" class="nav-link">Shop</a>
             <a href="contact.html" class="nav-link">Contact</a>
         </nav>
         <a href="cart.html" class="cart-icon">
             <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+            <span class="cart-count">0</span>
         </a>
     </header>
 
@@ -60,12 +68,13 @@
                 <template id="summary-item-template">
                     <div class="summary-item">
                         <span class="item-name"></span>
+                        <span class="item-quantity"></span>
                         <span class="item-total"></span>
                     </div>
                 </template>
 
                 <div class="summary-total">
-                    <span>Total amount</span>
+                    <span>Total Amount</span>
                     <span class="total-amount">₱0.00</span>
                 </div>
             </div>
@@ -77,14 +86,16 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2024 Critter Craft Co. All Rights Reserved.</p>
-        <div class="social-links">
-            <a href="#" aria-label="Facebook">Facebook</a>
-            <a href="#" aria-label="Instagram">Instagram</a>
-            <a href="#" aria-label="Twitter">Twitter</a>
+    <footer class="footer mt-auto bg-dark text-white text-center py-3">
+        <p class="mb-1">&copy; 2024 Critter Craft Co. All Rights Reserved.</p>
+        <div class="d-flex justify-content-center gap-3">
+            <a href="https://www.facebook.com/profile.php?id=61556898350697" class="text-decoration-none footer-link">Facebook</a>
+            <a href="#" class="text-decoration-none footer-link">Instagram</a>
+            <a href="#" class="text-decoration-none footer-link">Twitter</a>
         </div>
     </footer>
+    
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
