--- a/pages/cart.html
+++ b/pages/cart.html
@@ -27,10 +27,10 @@
     <header class="header">
         <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
         <nav class="nav">
-            <a href="../index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="shop.html" class="nav-link">Shop</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="/index.html" class="nav-link">Home</a>
+            <a href="../pages/about.html" class="nav-link">About</a>
+            <a href="../pages/shop.html" class="nav-link">Shop</a>
+            <a href="../pages/contact.html" class="nav-link">Contact</a>
         </nav>
         <a href="cart.html" class="cart-icon">
             <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
