--- a/pages/payment.html
+++ b/pages/payment.html
@@ -36,7 +36,7 @@
     <header class="header">
         <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
         <nav class="nav">
-            <a href="../index.html" class="nav-link">Home</a>
+            <a href="/index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
             <a href="shop.html" class="nav-link">Shop</a>
             <a href="contact.html" class="nav-link">Contact</a>
