--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="header py-3 px-4 d-flex justify-content-between align-items-center">
         <img src="./public/images/logo.png" alt="Critter Craft Co Logo" class="logo" height="50">
         <nav class="nav">
-            <a href="/index.html" class="nav-link active">Home</a>
+            <a href="../CritterCraftCo/index.html" class="nav-link active">Home</a>
             <a href="./pages/about.html" class="nav-link">About</a>
             <a href="./pages/shop.html" class="nav-link">Shop</a>
             <a href="./pages/contact.html" class="nav-link">Contact</a>
