--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -31,19 +31,20 @@
              Free shipping for orders 2000 PHP and above!
          </div>
      
-         <header class="header py-3 px-4 d-flex justify-content-between align-items-center">
-            <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo" height="50">
-            <nav class="nav">
-                <a href="/index.html" class="nav-link">Home</a>
-                <a href="../pages/about.html" class="nav-link">About</a>
-                <a href="../pages/shop.html" class="nav-link  active">Shop</a>
-                <a href="../pages/contact.html" class="nav-link">Contact</a>
-            </nav>
-            <a href="../pages/cart.html" class="cart-icon">
-                <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
-                <span class="cart-count">0</span>
-            </a>
-        </header>
+    <!-- Header -->
+    <header class="header py-3 px-4 d-flex justify-content-between align-items-center">
+        <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo" height="50">
+        <nav class="nav">
+            <a href="../index.html" class="nav-link">Home</a>
+            <a href="./about.html" class="nav-link">About</a>
+            <a href="./shop.html" class="nav-link active">Shop</a>
+            <a href="./contact.html" class="nav-link">Contact</a>
+        </nav>
+        <a href="./cart.html" class="cart-icon">
+            <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+            <span class="cart-count">0</span>
+        </a>
+    </header>
 
     <!-- Checkout Page Content -->
     <main class="checkout-page">
