--- a/pages/payment.html
+++ b/pages/payment.html
@@ -32,20 +32,20 @@
         Free shipping for orders 2000 PHP and above!
     </div>
 
-    <!-- Header -->
-    <header class="header">
-        <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo">
-        <nav class="nav">
-            <a href="/index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="shop.html" class="nav-link">Shop</a>
-            <a href="contact.html" class="nav-link">Contact</a>
-        </nav>
-        <a href="cart.html" class="cart-icon">
-            <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
-            <span class="cart-count">0</span>
-        </a>
-    </header>
+<!-- Header -->
+<header class="header py-3 px-4 d-flex justify-content-between align-items-center">
+    <img src="../public/images/logo.png" alt="Critter Craft Co Logo" class="logo" height="50">
+    <nav class="nav">
+        <a href="../index.html" class="nav-link">Home</a>
+        <a href="./about.html" class="nav-link">About</a>
+        <a href="./shop.html" class="nav-link active">Shop</a>
+        <a href="./contact.html" class="nav-link">Contact</a>
+    </nav>
+    <a href="./cart.html" class="cart-icon">
+        <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+        <span class="cart-count">0</span>
+    </a>
+</header>
 
     <!-- Payment Page Content -->
     <main class="payment-page">
