--- a/pages/shop.html
+++ b/pages/shop.html
@@ -31,10 +31,10 @@
     <nav class="nav">
         <a href="../index.html" class="nav-link">Home</a>
         <a href="./about.html" class="nav-link">About</a>
-        <a href="./pages/shop.html" class="nav-link active">Shop</a>
-        <a href="./pages/contact.html" class="nav-link">Contact</a>
+        <a href="./shop.html" class="nav-link active">Shop</a>
+        <a href="./contact.html" class="nav-link">Contact</a>
     </nav>
-    <a href="./pages/cart.html" class="cart-icon">
+    <a href="./cart.html" class="cart-icon">
         <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
         <span class="cart-count">0</span>
     </a>
