--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,10 +36,10 @@
             <a href="../pages/shop.html" class="nav-link">Shop</a>
             <a href="../pages/contact.html" class="nav-link active">Contact</a>
         </nav>
-        <a href="../pages/cart.html" class="cart-icon">
-            <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+        <a href="./cart.html" class="cart-container">
+            <img src="../public/images/icon-cart.png" alt="Cart" class="cart-icon">
             <span class="cart-count">0</span>
-        </a>
+        </a>    
     </header>
 
     <!-- Hero Section -->
