--- a/pages/about.html
+++ b/pages/about.html
@@ -40,10 +40,10 @@
                 <a href="./shop.html" class="nav-link">Shop</a>
                 <a href="./contact.html" class="nav-link">Contact</a>
             </nav>
-            <a href="./pages/cart.html" class="cart-icon">
-                <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+            <a href="./cart.html" class="cart-container">
+                <img src="../public/images/icon-cart.png" alt="Cart" class="cart-icon">
                 <span class="cart-count">0</span>
-            </a>
+            </a>    
         </header>
 
 
