--- a/pages/payment.html
+++ b/pages/payment.html
@@ -41,10 +41,10 @@
         <a href="./shop.html" class="nav-link active">Shop</a>
         <a href="./contact.html" class="nav-link">Contact</a>
     </nav>
-    <a href="./cart.html" class="cart-icon">
-        <img src="../public/images/icon-cart.png" alt="Cart" width="30" height="30">
+    <a href="./cart.html" class="cart-container">
+        <img src="../public/images/icon-cart.png" alt="Cart" class="cart-icon">
         <span class="cart-count">0</span>
-    </a>
+    </a>    
 </header>
 
     <!-- Payment Page Content -->
