added about description

--- a/pages/about.html
+++ b/pages/about.html
@@ -58,7 +58,9 @@
                 <div class="about-image"></div>
                 <div class="about-text">
                     <h1>About Us</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lobortis dolor quis neque semper, sollicitudin porta ante congue. Duis massa lacus, fermentum quis consectetur quis, aliquet sit amet metus. Pellentesque ac sagittis nisi.</p>
+                    <p>At Critter Craft Co., we specialize in crafting unique, personalized souvenirs perfect for any special occasion. From custom fridge magnets to personalized chip bags, each item is designed with love to add a memorable touch to your celebrations.
+
+                        We’re passionate about turning your ideas into one-of-a-kind keepsakes, ensuring quality and customer satisfaction every step of the way. Let us help make your special moments even more unforgettable.</p>
                 </div>
             </div>
         </div>
